# usd-automated-testing

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md
.github/workflows/: trigger-jenkins.yml
include/: usdIncludes.h
src/: main.cpp
test/: all_pass.usda  no_shaders.usda
test/all_pass/: all_pass.usda  all_pass_expected.txt
test/bad_file/: bad_file.usda  bad_file_expected.txt
test/ball_shading_variants/: ball_shading_variants.usda  ball_shading_variants_expected.txt
test/empty/: empty_expected.txt
test/invalid_layer/: invalid_layer.usda  invalid_layer_expected.txt
test/kitchen_set/: kitchen_set_expected.txt
test/no_shaders/: no_shaders_expected.txt
